# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("vibrator_entry") {
  deps = []
  if (defined(ohos_lite)) {
    deps += [ "hal:hdi_vibrator" ]
  } else {
    HDI_VIBRATOR_SERVICE_PATH =
        rebase_path("//device/soc/${device_company}/common/hal/vibrator")
    cmd = "if [ -f ${HDI_VIBRATOR_SERVICE_PATH}/BUILD.gn ]; then echo true; else echo false; fi"
    HAVE_VIBRATOR_DAL_SERVICE =
        exec_script("//build/lite/run_shell_cmd.py", [ cmd ], "value")

    if (HAVE_VIBRATOR_DAL_SERVICE) {
      deps += [ "${HDI_VIBRATOR_SERVICE_PATH}:dal_service" ]
    } else {
      deps += [
        "//drivers/peripheral/vibrator/hal:hdi_vibrator",
        "//drivers/peripheral/vibrator/hdi_service:hdf_vibrator_service",
      ]
    }
  }
}
