# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  drivers_peripheral_wlan_feature_enable_HDF_NL80211 = true
  drivers_peripheral_wlan_feature_enable_HDF_UT = false
  drivers_peripheral_wlan_feature_enable_HDF_WLAN_EXTEND_VDI = true
  drivers_peripheral_wlan_feature_emulator = false
  drivers_peripheral_wlan_feature_vendor = "hardware"
  drivers_peripheral_wlan_p2p_name = "p2p0"
}
