# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../audio.gni")

group("effect_model") {
  if (!defined(ohos_lite) && drivers_peripheral_audio_feature_effect) {
    deps = [
      "host:effect_model_service",
      "model:effect_model_service_1.0",
      "model/src/mock_effect:mock_effect_lib",
    ]
  }
}
