# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../audio.gni")

group("idl_audio") {
  deps = [
    "primary:audio_manager_service_5.0",
    "primary:audio_primary_driver",
    "primary_impl:audio_primary_impl_vendor",
  ]

  if (drivers_peripheral_audio_feature_community) {
    deps += [
      "pathselect:audio_path_select",
      "supportlibs:audio_capture_adapter",
      "supportlibs:audio_render_adapter",
    ]
  }
}
