# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../audio.gni")

if (defined(ohos_lite)) {
  group("audio_test_entry") {
    deps = [ "systemtest:hdf_test_audio" ]
  }
} else {
  group("audio_test_entry") {
    if (drivers_peripheral_audio_feature_hdf_proxy_stub == true) {
      testonly = true
      deps = [
        "benchmarktest:hdf_audio_benchmark_test",
        "systemtest:systemtest",
        "unittest:audiotest",
      ]

      if (!drivers_peripheral_audio_feature_rich_device) {
        deps += [ "fuzztest:fuzztest" ]
      }
    }
  }
}
